--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="{% url 'blog:home' %}">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contact Us</a>
@@ -52,9 +52,9 @@
                     {% if user.is_authenticated %}
                     <li class="nav-item avatar dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-55" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">Hi {{ user.get_username|title }}
-                            <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-2.jpg"
-                                class="rounded-circle z-depth-0" alt="avatar image" height="40">
+                            aria-haspopup="true" aria-expanded="false">Hi {{ user.get_short_name|title }}
+                            <img src="{{ user.get_pic.url }}" class="rounded-circle z-depth-0" alt="avatar image"
+                                height="40">
                         </a>
                         <div class="dropdown-menu dropdown-menu-lg-right dropdown-secondary"
                             aria-labelledby="navbarDropdownMenuLink-55">
@@ -75,10 +75,8 @@
             </div>
         </nav>
     </header>
-    <div class="flex-fill container">
-        {% block content %}
-        {% endblock %}
-    </div>
+    {% block content %}
+    {% endblock %}
     <footer class="footer">
         <div class="container text-center">
             <div class="row">
@@ -109,6 +107,7 @@
     <script type="text/javascript" src="{% static 'BlogProject/node_modules/popper.js/dist/popper.min.js' %}"></script>
     <script type="text/javascript"
         src="{% static 'BlogProject/node_modules/bootstrap/dist/js/bootstrap.min.js' %}"></script>
+    {% block script %}{% endblock%}
 </body>
 
 </html>
