--- a/templates/base.html
+++ b/templates/base.html
@@ -60,12 +60,12 @@
                             aria-labelledby="navbarDropdownMenuLink-55">
                             <a class="dropdown-item" href="#">My Profile</a>
                             <a class="dropdown-item" href="#">Change Password</a>
-                            <a class="dropdown-item" href="#">Logout</a>
+                            <a class="dropdown-item" href="{% url 'account:logout' %}">Logout</a>
                         </div>
                     </li>
                     {% else %}
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Login</a>
+                        <a class="nav-link" href="{% url 'account:login' %}">Login</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Register</a>
