--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
                         <div class="dropdown-menu dropdown-menu-lg-right dropdown-secondary"
                             aria-labelledby="navbarDropdownMenuLink-55">
                             <a class="dropdown-item" href="#">My Profile</a>
-                            <a class="dropdown-item" href="#">Change Password</a>
+                            <a class="dropdown-item" href="{% url 'account:password_change' %}">Change Password</a>
                             <a class="dropdown-item" href="{% url 'account:logout' %}">Logout</a>
                         </div>
                     </li>
