Adjusted author profile pic height

--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -22,7 +22,8 @@
             </div>
             <div class="card-footer d-flex flex-row align-content-stretch flex-nowrap">
                 <div class="blog_author_avatar">
-                    <img class="rounded-circle clickable" src="{{ post.get_author.get_pic.url}}" data-href="#">
+                    <img class="rounded-circle clickable" src="{{ post.get_author.get_pic.url}}" data-href="#"
+                        height="150">
                 </div>
                 <div class="author">
                     <h5 class="name clickable" data-href="">
