--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
                     </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item ">
-                        <a class="nav-link" href="#"> Add Blog</a>
+                        <a class="nav-link" href="{% url 'blog:add_blog_post' %}"> Add Blog</a>
                     </li>
                     {% endif %}
                 </ul>
@@ -58,7 +58,7 @@
                         </a>
                         <div class="dropdown-menu dropdown-menu-lg-right dropdown-secondary"
                             aria-labelledby="navbarDropdownMenuLink-55">
-                            <a class="dropdown-item" href="#">My Profile</a>
+                            <a class="dropdown-item" href="{% url 'account:user_profile' %}">My Profile</a>
                             <a class="dropdown-item" href="{% url 'account:password_change' %}">Change Password</a>
                             <a class="dropdown-item" href="{% url 'account:logout' %}">Logout</a>
                         </div>
