--- a/templates/base.html
+++ b/templates/base.html
@@ -68,7 +68,7 @@
                         <a class="nav-link" href="{% url 'account:login' %}">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Register</a>
+                        <a class="nav-link" href="{% url 'account:register' %}">Register</a>
                     </li>
                     {% endif %}
                 </ul>
