Comments News Letter Feature

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -38,7 +38,7 @@
         </div>
     </div>
     <div class="col-sm-3 right-section">
-        <div class="text-center newsletter">
+        <!-- <div class="text-center newsletter">
             <h4 class="pb-2">News and Updates</h4>
             <p class="pt-2 mb-3">Subscribe to our newsletter and receive the latest news
                 from Tech Source</p>
@@ -48,7 +48,7 @@
                     <input type="submit" value="Subscribe" class="mt-2 btn btn-outline-primary form-control">
                 </div>
             </form>
-        </div>
+        </div> -->
         <div class="category">
             <h4>Category</h4>
             <table class="table">
