--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
                         <a class="nav-link" href="{% url 'blog:home' %}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact Us</a>
+                        <a class="nav-link" href="{% url 'contact_us:contact' %}">Contact Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">About Us</a>
