Disabled like button for non login users

--- a/like/templates/like/like_section.html
+++ b/like/templates/like/like_section.html
@@ -11,6 +11,6 @@
     {% endif %}
 </form>
 {% else %}
-<button type="button" class="btn btn-outline-primary disabled w-100">{{ like_count }} <i
+<button type="button" class="btn btn-outline-primary disabled w-100" disabled>{{ like_count }} <i
         class="far fa-thumbs-up"></i></button><br>
 {% endif %}
