--- a/comment/templates/comment/comments.html
+++ b/comment/templates/comment/comments.html
@@ -3,31 +3,49 @@
         <div class="col-sm-1 mx-auto">
             <img src="{{ user.get_pic.url }}" class="rounded-circle z-depth-0" alt="avatar image" height="60">
         </div>
+        <!-- form for comment -->
         <div class="col-sm-11 py-2">
-            <form method="post" class="comment_form" action="{% url 'comment:post_comments' post.id %}">
+            <form method="post" id="comment_form" action="{% url 'comment:post_comments' post.id %}">
                 {% csrf_token %}
                 <textarea placeholder="Write Your Comment" name="message" class="form-control" rows=2></textarea>
+                {% if user.is_authenticated %}
                 <div class="text-right mt-2">
                     <button type="submit" class="btn btn-primary">Comment</button>
                 </div>
+                {% else %}
+                <div class="text-right mt-2">
+                    <button class="btn btn-primary disabled" disabled>Comment</button>
+                </div>
+                {% endif %}
             </form>
         </div>
     </div>
 </div>
+<!-- Display Comments -->
 <table class="table comments mt-3">
-    <tbody>
+    <tbody id="comment_section">
         {% for comment in comments %}
-        <tr>
+        <tr id="comment_{{ comment.id }}">
             <td>
-                <div class="comment_box d-flex flex-row align-content-stretch">
+                <div class="comment_box d-flex flex-row">
                     <div class="commenter_avatar">
                         <img class="rounded-circle clickable" src="{{ comment.get_user.get_pic.url }}" data-href="#"
                             height="60">
                     </div>
-                    <div class="commenter ml-5">
-                        <h5 class="name clickable" data-href="">
-                            {{ comment.get_user.get_full_name }} | {{ comment.date_modified }}
-                        </h5>
+                    <div class="commenter ml-5 flex-fill" id="comment_message_{{ comment.id }}">
+                        <div class="row">
+                            <h5 class="name clickable" data-href="">
+                                {{ comment.get_user.get_full_name }} | {{ comment.date_modified }}
+                            </h5>
+                            {% if user.is_authenticated and comment.get_user == user %}
+                            <div class="ml-auto">
+                                <button class="edit btn btn-outline-primary" type="button"
+                                    data-id="{{ comment.id }}">Edit</button>
+                                <button class="delete btn btn-outline-danger" type="button" data-toggle="modal"
+                                    data-target="#deletemodel" data-id="{{ comment.id }}">Delete</button>
+                            </div>
+                            {% endif %}
+                        </div>
                         <p class="comment">{{ comment.get_message }}</p>
                     </div>
                 </div>
