--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -25,7 +25,7 @@
                     <div class="card-footer">
                         <div class="text-left">
                             <ul class="list-unstyled list-inline m-0">
-                                <li class="list-inline-item ">Last Updated: {{ post.modified_date }}
+                                <li class="list-inline-item ">Last Updated: {{ post.modified_date|timesince }} ago
                                 </li>
                                 <li class="list-inline-item pl-2"><a href="#"><i class="far fa-thumbs-up pl-1">
                                         </i> {{ post.get_post_like_count }}</a></li>
