Change link for footer and changed color

--- a/templates/base.html
+++ b/templates/base.html
@@ -101,7 +101,7 @@
             </div>
         </div>
         <div class="footer-copyright text-center py-3">© 2020 Copyright:
-            <a href="https://mdbootstrap.com/"> Tech Source</a>
+            <a href="{% url 'blog:home' %}"> Tech Source</a>
         </div>
     </footer>
     <script type="text/javascript" src="{% static 'BlogProject/node_modules/jquery/jquery.min.js' %}"></script>
