--- a/static/BlogProject/css/base.css
+++ b/static/BlogProject/css/base.css
@@ -8,9 +8,14 @@ body {
     margin-top: 100px;
 }
 .footer {
-    background-color: aqua;
+    background-color: #f8f9fa;
 }
 
 .footer-copyright {
-    background-color: aquamarine;
+    background-color: #00fae5;
+}
+
+.clickable:hover {
+    cursor: pointer;
+    color: rgb(8, 71, 206);
 }
