--- a/blog/templates/blog/comment.html
+++ b/blog/templates/blog/comment.html
@@ -9,8 +9,8 @@
                                 {% include 'like/like_section.html' %}
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#"><span id="comments_count">{{ comments_count }}</span> <i
-                                        class="far fa-comments"></i></a>
+                                <a class="nav-link text-primary"><span id="comments_count">{{ comments_count }}</span>
+                                    <i class="far fa-comments"></i></a>
                             </li>
                         </ul>
                     </nav>
