Included Paginotor for list view

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -11,7 +11,7 @@
 <div class="container-fluid row content flex-fill">
     <div class="col-sm-9 left-section">
         <div class="row row-cols-xl-3">
-            {% for post in posts %}
+            {% for post in page_obj %}
             <div class="col mb-4">
                 <div class="card h-100 blog">
                     <a href="{% url 'blog:blog_detail' post.get_slug%}"><img class="card-img-top card-img"
@@ -39,6 +39,23 @@
                 </div>
             </div>
             {% endfor %}
+        </div>
+        <div class="pagination">
+            <span class="step-links">
+                {% if page_obj.has_previous %}
+                <a href="?page=1">&laquo; first</a>
+                <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+                {% endif %}
+
+                <span class="current">
+                    Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                </span>
+
+                {% if page_obj.has_next %}
+                <a href="?page={{ page_obj.next_page_number }}">next</a>
+                <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+                {% endif %}
+            </span>
         </div>
     </div>
     <div class="col-sm-3 right-section">
