--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -40,23 +40,25 @@
             </div>
             {% endfor %}
         </div>
-        <div class="pagination">
-            <span class="step-links">
+        <nav aria-label="Page navigation">
+            <ul class="pagination justify-content-center">
                 {% if page_obj.has_previous %}
-                <a href="?page=1">&laquo; first</a>
-                <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+                <li class="page-item"><a class="page-link" href="?page=1">&laquo; First</a></li>
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+                </li>
                 {% endif %}
-
                 <span class="current">
-                    Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                    <li class="page-item"><a class="page-link">Page {{ page_obj.number }} of
+                            {{ page_obj.paginator.num_pages }}</a></li>
                 </span>
-
                 {% if page_obj.has_next %}
-                <a href="?page={{ page_obj.next_page_number }}">next</a>
-                <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+                <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a></li>
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">Last &raquo;</a></li>
                 {% endif %}
-            </span>
-        </div>
+            </ul>
+        </nav>
     </div>
     <div class="col-sm-3 right-section">
         <!-- <div class="text-center newsletter">
