Changed Logo Name

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Tech Source{% endblock %}
+{% block title %}Source{% endblock %}
 
 {% block css_link %}
 <link rel="stylesheet" href="{% static 'blog/css/index.css' %}">
