--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 <body class="d-flex flex-column">
     <header class="fixed-top">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <span class="navbar-brand">Tech Source</span>
+            <span class="navbar-brand">Source</span>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -101,7 +101,7 @@
             </div>
         </div>
         <div class="footer-copyright text-center py-3">© 2020 Copyright:
-            <a href="{% url 'blog:home' %}"> Tech Source</a>
+            <a href="{% url 'blog:home' %}">Source</a>
         </div>
     </footer>
     <script type="text/javascript" src="{% static 'BlogProject/node_modules/jquery/jquery.min.js' %}"></script>
