--- a/comment/templates/comment/comment_form.html
+++ b/comment/templates/comment/comment_form.html
@@ -3,6 +3,7 @@
     {% csrf_token %}
     {% render_field form.message class+="form-control" rows=2 %}
     <div class="text-right mt-2">
+        <a class="btn btn-secondary cancel_edit text-white">Cancel</a>
         <button type="submit" class="btn btn-primary">Update</button>
     </div>
 </form>
