Added styling to 403, 404, 500 page

--- a/templates/403.html
+++ b/templates/403.html
@@ -3,5 +3,5 @@
 {% block title %}Access Denied Found{% endblock %}
 
 {% block content %}
-<h1 class="text-center">You are not allowed to access this page</h1>
+<h1 class="text-center content flex-fill">You are not allowed to access this page</h1>
 {% endblock %}
