--- a/templates/404.html
+++ b/templates/404.html
@@ -3,5 +3,5 @@
 {% block title %}Not Found{% endblock %}
 
 {% block content %}
-<h1 class="text-center">We couldn't find the page you are looking for</h1>
+<h1 class="text-center content flex-fill">We couldn't find the page you are looking for</h1>
 {% endblock %}
