--- a/templates/500.html
+++ b/templates/500.html
@@ -3,5 +3,6 @@
 {% block title %}Internal Server Error{% endblock %}
 
 {% block content %}
-<h1 class="text-center">Internal Server Error. Please <a href="{% url 'contact:contact' %}">Contact Us</a></h1>
+<h1 class="text-center content flex-fill">Internal Server Error. Please <a href="{% url 'contact:contact' %}">Contact
+                Us</a></h1>
 {% endblock %}
