--- a/account/templates/account/edit_profile.html
+++ b/account/templates/account/edit_profile.html
@@ -66,6 +66,7 @@
                 </div>
                 <div class="form-group update_btn">
                     <input type="submit" class="btn btn-primary" value="update">
+                    <a onclick="window.history.back();" class="btn btn-secondary text-white">cancel<a>
                 </div>
             </form>
         </div>
